assets/css/layout.css
/* ... */
#social_about {
  padding: 0;
  margin-top: -0.75rem;
  text-align: center;
}

#social_about ul {
  padding: 0;
  margin: 0;
  display: inline-block;
}

#social_about a {
  color: #505050;
}

.social-media-list {
  list-style: none;
  padding: 0;
}

.social-media-list > li {
  display: inline;
  float: left;
  margin-right: 12px;
  li:last-of-type { margin-right: 0 };
}

/* Copyright */
.copyright-div {
  position: absolute;
  bottom: 0;
  width: 100%;
  padding-left: 1rem;
}

.copyright-div > p {
  position: absolute;
  bottom: 0;
}

/* ---------- Figures and Captions ---------- */
figure {
  padding: 0;
  margin: 0;
  width: 100%;
}

figure img {
  padding: 0;
  margin: 0;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

figcaption {
  padding: 0;
  margin: 0;
  width: 90%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  text-align: justify;
  font-size: 80%;
}

.fig_number {
  /* font-variant: small-caps; */
  font-weight: bold;
}

/* ---------- Algorithm ---------- */
.algorithm {
  display: block;
  margin-top: 0;
  margin-bottom: 1rem;
  padding: 1rem;
  background-color: #f9f9f9;
  width: 100%;
  overflow-x: scroll;
  /* hide scrollbar */
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;     /* Firefox */
}

/* Hide scrollbar for Chrome, Safari and Opera */
.algorithm::-webkit-scrollbar {
  display: none;
}

.algorithmic p {
  padding: 0;
  white-space: pre;
  margin-bottom: 0.2rem;
  line-height: 1.1rem;
  font-size: 90%;
  color: inherit;
  background-color: transparent;
}

.alg_caption_div {
  text-align: left;
  margin-bottom: 0.5rem;
}

.alg_title {
  font-weight: bold;
  margin-right: 0.2rem;
}

.alg_caption {
  font-style: italic;
}

.alg_command {
  font-weight: bold;
}

.alg_proc {
  font-variant: small-caps;
}

.alg_call {
  font-variant: small-caps;
}

/*---------- Math ----------*/

/* flush QED to the right */
.qed_symbol {
  float: right;
  text-align: right;
  font-size: 1.5rem;
  margin-top: -0.5rem;
}

/* TODO: make post about this */
.MathJax_ref {
  stroke: #268bd2;
  fill: #268bd2;
}

/*---------- Source Code Table ----------*/
#source_code_table_div {
  overflow-x: scroll;
}

#source_code_table {
  margin-top: 2rem;
}

/*---------- Footnotes ----------*/
.footnotes {
  padding-top: 1rem;
  padding-bottom: 0;
  margin-top: 50px;
  border-top: 1px solid #eee;
  font-size: 90%;
  color: #505050;
}

.footnotes li {
  padding: 0;
  margin-bottom: 0.25rem;
}

.footnotes p {
  padding: 0;
  margin: 0;
}
 
/*---------- Side/marginnotes ----------*/
/* See: <https://github.com/edwardtufte/tufte-css/blob/gh-pages/tufte.css> */
.sidenote,
.marginnote {
    float: right;
    clear: right;
    text-align: left;
    margin-right: -60%;
    padding-right: 3rem;
    width: 50%;
    margin-top: 0.3rem;
    margin-bottom: 0;
    font-size: 0.8rem;
    line-height: 1.3;
    vertical-align: baseline;
    position: relative;
}

.sidenote {
  padding-left: 1em;   /* hanging indent */
  text-indent: -1em;
}

.sidenote-number {
    counter-increment: sidenote-counter;
}

.sidenote-number:after,
.sidenote:before {
    /* font-family: et-book-roman-old-style; */
    position: relative;
    vertical-align: baseline;
}

.sidenote-number:after {
    content: counter(sidenote-counter);
    font-size: 0.8rem;
    top: -0.5rem;
    left: 0.1rem;
}

.sidenote:before {
    content: counter(sidenote-counter) " ";
    font-size: 0.8rem;
    top: -0.3rem;
}

.marginnote > code,
.sidenote > code {
    font-size: 1rem;
}

blockquote .sidenote,
blockquote .marginnote {
    margin-right: -82%;
    min-width: 59%;
    text-align: left;
}

input.margin-toggle {
    display: none;
}

label.sidenote-number {
    display: inline;
}

label.margin-toggle:not(.sidenote-number) {
    display: none;
}

/* @media (max-width: 760px) { */
@media (max-width: 48em) {
  label.margin-toggle:not(.sidenote-number) {
    display: inline;
  }

  .sidenote,
  .marginnote {
    display: none;
  }
  
  /* Make clear the label is a link to display the note */
  label {
    cursor: pointer;
    color: #268bd2;
  }

  label:hover,
  label:focus {
    text-decoration: underline;
  }


  .margin-toggle:checked + .sidenote,
  .margin-toggle:checked + .marginnote {
    display: block;
    float: left;
    left: 1rem;
    clear: both;
    width: 95%;
    margin: 1rem 2.5%;
    vertical-align: baseline;
    position: relative;
  }

}

/*============================================================================= 
 *===========================================================================*/

